4/k8s_v2_retry/user-virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: user-service-virtual
spec:
  hosts:
    - user-service-service # ім'я Service до якого застосовується налаштування
  http:
    - route:
        - destination:
            host: user-service-service # ім'я Service до якого застосовується налаштування
      timeout: 5s
      retries:
        attempts: 3
        retryOn: 5xx
        perTryTimeout: 5s
